@@ -286,6 +286,7 @@ describe "The Classifier's Item Cache" do
                                                    "-l /tmp/classifier-item_cache_spec.log " +
                                                    "-c #{File.join(ROOT, "fixtures/real-db.conf")} " +
                                                    "--cache-update-wait-time 1 " +
+                                                   "--load_items_since 3650 " +
                                                    "--db #{Database} 2> /dev/null" 
     system(classifier_cmd)
     sleep(0.0001)
